CesiumGen/Headers/cesium/cesium_tileset.h


typedef struct CesiumAsyncSystem CesiumAsyncSystem;
typedef struct CesiumAssetAccessor CesiumAssetAccessor;
typedef struct CesiumCreditSystem CesiumCreditSystem;
typedef struct CesiumTilesetExternals CesiumTilesetExternals;
typedef struct CesiumTilesetOptions CesiumTilesetOptions;
typedef struct CesiumTileset CesiumTileset;
typedef struct CesiumViewState CesiumViewState;
typedef struct CesiumViewUpdateResult CesiumViewUpdateResult;
typedef struct CesiumTile CesiumTile;
typedef void (*CesiumTilesetLoadErrorCallback)(void* userData, const char* message);
typedef struct CesiumRendererResourceCallbacks {
    void* userData;
    void* (*prepareInLoadThread)(void* userData, const CesiumGltfModel* model, CesiumMat4 transform);
    void* (*prepareInMainThread)(void* userData, const CesiumTile* tile, void* pLoadThreadResult);
    void (*freeResources)(void* userData, const CesiumTile* tile, void* pLoadThreadResult, void* pMainThreadResult);
    void* (*prepareRasterInLoadThread)(
        void* userData,
        const uint8_t* imageData,
        size_t imageDataSize,
        int32_t width,
        int32_t height,
        int32_t channels,
        int32_t bytesPerChannel,
        CesiumGpuCompressedPixelFormat compressedPixelFormat,
        const CesiumImageMipPosition* mips,
        int32_t mipCount);
    void* (*prepareRasterInMainThread)(void* userData, void* pLoadThreadResult);
    void (*freeRasterResources)(void* userData, void* pLoadThreadResult, void* pMainThreadResult);
    void (*attachRasterInMainThread)(
        void* userData,
        const CesiumTile* tile,
        int32_t overlayTextureCoordinateID,
        void* pMainThreadRasterResources,
        CesiumVec2 translation,
        CesiumVec2 scale);
    void (*detachRasterInMainThread)(
        void* userData,
        const CesiumTile* tile,
        int32_t overlayTextureCoordinateID,
        void* pMainThreadRasterResources);
} CesiumRendererResourceCallbacks;
CESIUM_API int cesium_credit_system_get_credits_to_show_on_screen_count(const CesiumCreditSystem* creditSystem);
CESIUM_API const char* cesium_credit_system_get_credit_to_show_on_screen(
    const CesiumCreditSystem* creditSystem,
    int index);
CESIUM_API void cesium_credit_system_start_next_frame(CesiumCreditSystem* creditSystem);
CESIUM_API CesiumTilesetExternals* cesium_tileset_externals_create(
    CesiumAsyncSystem* asyncSystem,
    CesiumAssetAccessor* accessor,
    CesiumCreditSystem* creditSystem);
CESIUM_API void cesium_tileset_externals_destroy(CesiumTilesetExternals* externals);
CESIUM_API void cesium_tileset_externals_set_renderer_resource_callbacks(
    CesiumTilesetExternals* externals,
    const CesiumRendererResourceCallbacks* callbacks);
CESIUM_API CesiumTilesetOptions* cesium_tileset_options_create(void);
CESIUM_API void cesium_tileset_options_destroy(CesiumTilesetOptions* options);
CESIUM_API void cesium_tileset_options_set_maximum_screen_space_error(CesiumTilesetOptions* options, double value);
CESIUM_API void cesium_tileset_options_set_maximum_simultaneous_tile_loads(CesiumTilesetOptions* options, uint32_t value);
CESIUM_API void cesium_tileset_options_set_maximum_cached_bytes(CesiumTilesetOptions* options, int64_t value);
CESIUM_API void cesium_tileset_options_set_preload_ancestors(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_preload_siblings(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_forbid_holes(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_enable_frustum_culling(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_enable_fog_culling(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_enable_occlusion_culling(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_enable_lod_transition_period(CesiumTilesetOptions* options, int value);
CESIUM_API void cesium_tileset_options_set_lod_transition_length(CesiumTilesetOptions* options, float value);
CESIUM_API void cesium_tileset_options_set_load_error_callback(
    CesiumTilesetOptions* options,
    CesiumTilesetLoadErrorCallback callback,
    void* userData);
CESIUM_API double cesium_tileset_options_get_maximum_screen_space_error(const CesiumTilesetOptions* options);
CESIUM_API uint32_t cesium_tileset_options_get_maximum_simultaneous_tile_loads(const CesiumTilesetOptions* options);
CESIUM_API int64_t cesium_tileset_options_get_maximum_cached_bytes(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_preload_ancestors(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_preload_siblings(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_forbid_holes(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_enable_frustum_culling(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_enable_fog_culling(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_enable_occlusion_culling(const CesiumTilesetOptions* options);
CESIUM_API int cesium_tileset_options_get_enable_lod_transition_period(const CesiumTilesetOptions* options);
CESIUM_API float cesium_tileset_options_get_lod_transition_length(const CesiumTilesetOptions* options);
CESIUM_API CesiumViewState* cesium_view_state_create_perspective(
    CesiumVec3 position,
    CesiumVec3 direction,
    CesiumVec3 up,
    CesiumVec2 viewportSize,
    double horizontalFieldOfView,
    double verticalFieldOfView,
    const CesiumEllipsoid* ellipsoid);
CESIUM_API CesiumViewState* cesium_view_state_create_from_matrices(
    CesiumMat4 viewMatrix,
    CesiumMat4 projectionMatrix,
    CesiumVec2 viewportSize,
    const CesiumEllipsoid* ellipsoid);
CESIUM_API CesiumViewState* cesium_view_state_create_orthographic(
    CesiumVec3 position,
    CesiumVec3 direction,
    CesiumVec3 up,
    CesiumVec2 viewportSize,
    double left,
    double right,
    double bottom,
    double top,
    const CesiumEllipsoid* ellipsoid);
CESIUM_API void cesium_view_state_destroy(CesiumViewState* viewState);
CESIUM_API CesiumTileset* cesium_tileset_create_from_url(
    CesiumTilesetExternals* externals,
    const char* url,
    const CesiumTilesetOptions* options);
CESIUM_API CesiumTileset* cesium_tileset_create_from_ion(
    CesiumTilesetExternals* externals,
    int64_t ionAssetID,
    const char* ionAccessToken,
    const CesiumTilesetOptions* options,
    const char* ionAssetEndpointUrl);
CESIUM_API void cesium_tileset_destroy(CesiumTileset* tileset);
CESIUM_API const CesiumViewUpdateResult* cesium_tileset_update_view(
    CesiumTileset* tileset,
    const CesiumViewState* const* viewStates,
    int viewStateCount,
    float deltaTime);
CESIUM_API const CesiumTile* cesium_tileset_get_root_tile(const CesiumTileset* tileset);