Evergine.Bindings.CesiumNative/Generated/Functions.cs


		/// <summary>
		/// @brief Returns the number of credits that should be shown on screen.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_credit_system_get_credits_to_show_on_screen_count(IntPtr creditSystem);

		/// <summary>
		/// @brief Returns the HTML text of a credit that should be shown on screen.
		/// @param index The credit index (0 to count-1).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_credit_system_get_credit_to_show_on_screen(IntPtr creditSystem, int index);

		/// <summary>
		/// @brief Signals the start of a new frame. Call before updateView.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_credit_system_start_next_frame(IntPtr creditSystem);

		/// <summary>
		/// @brief Creates the externals bundle required to construct a Tileset.
		/// None of the parameters are consumed; the externals hold shared references.
		/// @warning The caller must keep asyncSystem, accessor, and creditSystem alive
		/// for the entire lifetime of any Tileset created with these externals.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_externals_create(IntPtr asyncSystem, IntPtr accessor, IntPtr creditSystem);

		/// <summary>
		/// @brief Destroys the tileset externals.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_externals_destroy(IntPtr externals);

		/// <summary>
		/// @brief Sets the renderer resource callbacks on the externals.
		/// Pass NULL for callbacks to revert to the default no-op implementation.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_externals_set_renderer_resource_callbacks(IntPtr externals, CesiumRendererResourceCallbacks* callbacks);

		/// <summary>
		/// @brief Creates a new TilesetOptions with default values.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_options_create();

		/// <summary>
		/// @brief Destroys the tileset options.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_destroy(IntPtr options);

		/// <summary>
		/// --- Setters ---
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_maximum_screen_space_error(IntPtr options, double value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_maximum_simultaneous_tile_loads(IntPtr options, uint value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_maximum_cached_bytes(IntPtr options, long value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_preload_ancestors(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_preload_siblings(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_forbid_holes(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_enable_frustum_culling(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_enable_fog_culling(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_enable_occlusion_culling(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_enable_lod_transition_period(IntPtr options, int value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_lod_transition_length(IntPtr options, float value);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_options_set_load_error_callback(IntPtr options, CesiumTilesetLoadErrorCallback callback, void* userData);

		/// <summary>
		/// --- Getters ---
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern double cesium_tileset_options_get_maximum_screen_space_error(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint cesium_tileset_options_get_maximum_simultaneous_tile_loads(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern long cesium_tileset_options_get_maximum_cached_bytes(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_preload_ancestors(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_preload_siblings(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_forbid_holes(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_enable_frustum_culling(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_enable_fog_culling(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_enable_occlusion_culling(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_options_get_enable_lod_transition_period(IntPtr options);

		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern float cesium_tileset_options_get_lod_transition_length(IntPtr options);

		/// <summary>
		/// @brief Creates a view state with a symmetric perspective projection.
		/// @param position Camera position in ECEF coordinates.
		/// @param direction Camera look direction.
		/// @param up Camera up vector.
		/// @param viewportSize Viewport size in pixels (width, height).
		/// @param horizontalFieldOfView Horizontal FOV in radians.
		/// @param verticalFieldOfView Vertical FOV in radians.
		/// @param ellipsoid The ellipsoid, or NULL for WGS84.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_view_state_create_perspective(CesiumVec3 position, CesiumVec3 direction, CesiumVec3 up, CesiumVec2 viewportSize, double horizontalFieldOfView, double verticalFieldOfView, IntPtr ellipsoid);

		/// <summary>
		/// @brief Creates a view state from view and projection matrices.
		/// @param viewMatrix 4x4 view matrix (inverse of camera pose).
		/// @param projectionMatrix 4x4 projection matrix.
		/// @param viewportSize Viewport size in pixels (width, height).
		/// @param ellipsoid The ellipsoid, or NULL for WGS84.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_view_state_create_from_matrices(CesiumMat4 viewMatrix, CesiumMat4 projectionMatrix, CesiumVec2 viewportSize, IntPtr ellipsoid);

		/// <summary>
		/// @brief Creates a view state with an orthographic projection.
		/// @param position Camera position in ECEF coordinates.
		/// @param direction Camera look direction.
		/// @param up Camera up vector.
		/// @param viewportSize Viewport size in pixels (width, height).
		/// @param left Left distance of near plane edge from center.
		/// @param right Right distance of near plane edge from center.
		/// @param bottom Bottom distance of near plane edge from center.
		/// @param top Top distance of near plane edge from center.
		/// @param ellipsoid The ellipsoid, or NULL for WGS84.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_view_state_create_orthographic(CesiumVec3 position, CesiumVec3 direction, CesiumVec3 up, CesiumVec2 viewportSize, double left, double right, double bottom, double top, IntPtr ellipsoid);

		/// <summary>
		/// @brief Destroys a view state.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_view_state_destroy(IntPtr viewState);

		/// <summary>
		/// @brief Creates a tileset from a tileset.json URL.
		/// @param externals The externals bundle (async, HTTP, credits).
		/// @param url The URL of the tileset.json.
		/// @param options The tileset options, or NULL for defaults.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_create_from_url(IntPtr externals, [MarshalAs(UnmanagedType.LPStr)] string url, IntPtr options);

		/// <summary>
		/// @brief Creates a tileset from a Cesium Ion asset.
		/// @param externals The externals bundle.
		/// @param ionAssetID The Cesium Ion asset ID.
		/// @param ionAccessToken The Cesium Ion access token.
		/// @param options The tileset options, or NULL for defaults.
		/// @param ionAssetEndpointUrl The Ion API endpoint, or NULL for "https://api.cesium.com/".
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_create_from_ion(IntPtr externals, long ionAssetID, [MarshalAs(UnmanagedType.LPStr)] string ionAccessToken, IntPtr options, [MarshalAs(UnmanagedType.LPStr)] string ionAssetEndpointUrl);

		/// <summary>
		/// @brief Destroys a tileset.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_destroy(IntPtr tileset);

		/// <summary>
		/// @brief Updates the tileset's default view group and loads tiles.
		/// This is the main per-frame call. Pass one or more view states describing
		/// the camera(s). The returned result pointer is valid until the next call
		/// to this function or until the tileset is destroyed.
		/// @param tileset The tileset.
		/// @param viewStates Array of view state pointers.
		/// @param viewStateCount Number of view states.
		/// @param deltaTime Time elapsed since last update, in seconds.
		/// @return Borrowed pointer to the update result.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_update_view(IntPtr tileset, IntPtr* viewStates, int viewStateCount, float deltaTime);

		/// <summary>
		/// @brief Gets the root tile, or NULL if not yet available.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_get_root_tile(IntPtr tileset);
